/***********************************************************************
X3 ChangeLog

2009-10-19  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/nickserv.c: Send privs out when auto opering clients. These are
	controlled for now via auto_oper_privs/auto_admin_privs in the nickserv
	section within x3.conf. In the future we will look at account specific
	privs.

	* src/proto.h: Added irc_raw_privs and client_modify_priv_by_name.

	* src/proto-p10.c: Added irc_raw_privs.

	* src/tools.c: Added R extended ban.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add python_handle_topic and refactor
	emb_get_channel.

	* src/plugins/__init__.py: add empty topic handler function to
	Plugin class.

	* src/modpython.py: add topic handler function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add python_handle_del_user.

	* src/plugins/__init__.py: add empty del_user handler function to
	Plugin class.

	* src/modpython.py: add del_user handler function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor python_handle_nick_change.

	* src/plugins/__init__.py: add empty nick_change handler function to
	Plugin class.

	* src/modpython.py: refactor nick_change to use new plugin
	system.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/plugins/__init__.py: refactor plugin instantiation logic.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor python_handle_new_user.

	* src/modpython.py: refactor new_user handler to use new plugin
	system.

	* src/plugins/__init__.py: add empty new_user handler function to
	Plugin class.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor python_handle_server_link to be more
	Pythonic.

	* src/modpython.py: rename old plugins class to plugins_ and use a
	more general plugin system.

	* src/plugins/__init__.py: extend with plugin base-class and
	recursive plugin load logic.
